--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,21 @@
 # These settings are present to demonstrate minimal binary size in release mode. Don't forget to strip the executable
 # too.
 [profile.release]
-opt-level = 'z'
-lto = true
-panic = 'abort'
+    # opt-level = 'z'
+    # lto = true
+    panic='abort'
 
 [workspace]
-members = [
-    "lib",
-    "integration",
-    "samples/demo-server",
-    "samples/simple-client",
-    "samples/mqtt-client",
-    "samples/simple-server",
-    "samples/chess-server",
-    "samples/discovery-client",
-    "samples/web-client",
-    "samples/event-client",
-    "tools/certificate-creator"
-]
+    members=[
+        "lib",
+        "integration",
+        # "samples/demo-server",
+        # "samples/simple-client",
+        # "samples/mqtt-client",
+        # "samples/simple-server",
+        # "samples/chess-server",
+        # "samples/discovery-client",
+        # "samples/web-client",
+        # "samples/event-client",
+        "tools/certificate-creator",
+    ]
