--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,201 @@
-// Place your settings in this file to overwrite default and user settings.
 {
+    "editor.foldingImportsByDefault": true,
+    "terminal.integrated.tabs.enabled": true,
+    "editor.bracketPairColorization.enabled": true,
+    "editor.suggest.preview": true,
+    "evenBetterToml.formatter.alignEntries": true,
+    "evenBetterToml.semanticTokens": true,
+    "evenBetterToml.schema.links": true,
+    "python.linting.enabled": true,
+    "terminal.integrated.copyOnSelection": true,
+    "notebook.consolidatedRunButton": true,
+    "notebook.lineNumbers": "on",
+    "python.analysis.completeFunctionParens": true,
+    "python.analysis.typeCheckingMode": "basic",
+    "python.formatting.autopep8Args": [
+        "--ignore",
+        "E402"
+    ],
+    "editor.guides.bracketPairs": true,
+    "python.terminal.activateEnvInCurrentTerminal": true,
+    "search.useIgnoreFiles": false,
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.colorTheme": "Monokai Classic",
+    "window.autoDetectColorScheme": true,
+    "workbench.tree.indent": 16,
+    "editor.maxTokenizationLineLength": 2147483647,
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
+    "files.autoGuessEncoding": true,
+    "editor.suggest.localityBonus": true,
+    "editor.suggest.shareSuggestSelections": true,
+    "search.showLineNumbers": true,
+    "debug.inlineValues": "auto",
+    "scm.alwaysShowActions": true,
+    "terminal.integrated.cursorBlinking": true,
+    "markdown.preview.fontSize": 13,
+    "terminal.integrated.fontFamily": "'Ubuntu Mono', Consolas",
+    "terminal.integrated.fontSize": 11,
+    "editor.fontFamily": "'Ubuntu Mono', Consolas",
+    "editor.fontSize": 12,
+    "extensions.ignoreRecommendations": false,
+    "editor.minimap.enabled": false,
+    "breadcrumbs.enabled": true,
+    "debug.console.fontFamily": "'Ubuntu Mono', Consolas",
+    "debug.console.fontSize": 11,
+    "workbench.editor.tabSizing": "shrink",
+    "explorer.openEditors.visible": 1,
+    "workbench.iconTheme": "Monokai Classic Icons",
+    "terminal.integrated.lineHeight": 1.4,
+    "git.confirmSync": false,
+    "editor.suggestSelection": "first",
+    "git.ignoreLegacyWarning": true,
+    "docker.containers.groupBy": "State",
+    "editor.smoothScrolling": true,
+    "workbench.list.smoothScrolling": true,
+    "workbench.startupEditor": "newUntitledFile",
+    "python.languageServer": "Pylance",
+    "explorer.confirmDelete": false,
+    "remote.restoreForwardedPorts": true,
+    "remote.downloadExtensionsLocally": true,
+    "editor.suggest.showStatusBar": true,
+    "debug.toolBarLocation": "docked",
+    "editor.fontLigatures": true,
+    "workbench.editorAssociations": {
+        "*.ipynb": "jupyter-notebook"
+    },
+    "markdown.preview.lineHeight": 1.4,
+    "terminal.integrated.minimumContrastRatio": 4.5,
+    "jupyter.themeMatplotlibPlots": true,
+    "diffEditor.ignoreTrimWhitespace": false,
+    "workbench.editor.decorations.colors": true,
+    "workbench.editor.decorations.badges": true,
+    "notebook.cellToolbarLocation": {
+        "default": "right",
+        "jupyter-notebook": "left"
+    },
+    "redhat.telemetry.enabled": true,
+    "hediet.vscode-drawio.codeLinkActivated": false,
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
+    },
+    "[xml]": {
+        "editor.defaultFormatter": "DotJoshJohnson.xml"
+    },
+    "editor.hover.delay": 500,
+    "workbench.editor.enablePreviewFromQuickOpen": true,
+    "protoc": {
+        "compile_on_save": true,
+    },
+    "workbench.editor.historyBasedLanguageDetection": true,
+    "explorer.fileNesting.enabled": true,
+    "[rust]": {
+        "editor.defaultFormatter": "rust-lang.rust-analyzer"
+    },
+    "rust-analyzer.debug.openDebugPane": true,
+    "rust-analyzer.hover.actions.references.enable": true,
+    "rust-analyzer.imports.granularity.enforce": true,
+    "rust-analyzer.inlayHints.closureReturnTypeHints.enable": "always",
+    "rust-analyzer.lens.references.adt.enable": true,
+    "rust-analyzer.lens.references.enumVariant.enable": true,
+    "rust-analyzer.lens.references.method.enable": true,
+    "rust-analyzer.lens.references.trait.enable": true,
+    "rust-analyzer.rustfmt.rangeFormatting.enable": false,
+    "rust-analyzer.inlayHints.bindingModeHints.enable": true,
+    "rust-analyzer.procMacro.attributes.enable": true,
+    "rust-analyzer.restartServerOnConfigChange": true,
+    "rust-analyzer.typing.autoClosingAngleBrackets.enable": true,
+    "explorer.excludeGitIgnore": false,
+    "python.analysis.inlayHints.functionReturnTypes": true,
+    "python.analysis.inlayHints.variableTypes": true,
+    "window.commandCenter": true,
+    "git.mergeEditor": true,
+    "evenBetterToml.formatter.alignComments": true,
+    "evenBetterToml.formatter.allowedBlankLines": 1,
+    "evenBetterToml.formatter.arrayAutoCollapse": true,
+    "evenBetterToml.formatter.arrayAutoExpand": true,
+    "evenBetterToml.formatter.arrayTrailingComma": true,
+    "evenBetterToml.formatter.columnWidth": 1,
+    "evenBetterToml.formatter.compactArrays": true,
+    "evenBetterToml.formatter.compactEntries": true,
+    "evenBetterToml.formatter.compactInlineTables": true,
+    "evenBetterToml.formatter.indentEntries": true,
+    "evenBetterToml.formatter.crlf": true,
+    "evenBetterToml.formatter.indentTables": true,
+    "evenBetterToml.formatter.reorderKeys": true,
+    "evenBetterToml.formatter.trailingNewline": true,
+    "yaml.format.singleQuote": false,
+    "xmlTools.enforcePrettySelfClosingTagOnFormat": true,
+    "xmlTools.enableXmlTreeViewCursorSync": true,
+    "xmlTools.removeCommentsOnMinify": true,
+    "xmlTools.splitAttributesOnFormat": false,
+    "json.format.keepLines": true,
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "java.configuration.runtimes": [
+        { "name": "JavaSE-17", "path": "/usr/lib/jvm/default-java" }
+    ],
+    "java.jdt.ls.java.home": "/usr/lib/jvm/default-java",
+    "gradle.nestedProjects": true,
+    "gradle.autoDetect": "on",
+    "terminal.integrated.smoothScrolling": true,
+    "rust-analyzer.semanticHighlighting.operator.specialization.enable": true,
+    "rust-analyzer.semanticHighlighting.punctuation.enable": true,
+    "rust-analyzer.semanticHighlighting.punctuation.separate.macro.bang": true,
+    "rust-analyzer.semanticHighlighting.punctuation.specialization.enable": true,
     "debug.allowBreakpointsEverywhere": true,
-    "git.ignoreLimitWarning": true
+    "rust-analyzer.assist.emitMustUse": true,
+    "rust-analyzer.inlayHints.discriminantHints.enable": "never",
+    "rust-analyzer.inlayHints.expressionAdjustmentHints.enable": "never",
+    "rust-analyzer.inlayHints.lifetimeElisionHints.useParameterNames": true,
+    "scm.alwaysShowRepositories": true,
+    "scm.autoReveal": true,
+    "vscode-postgres.prettyPrintJSONfields": true,
+    "vscode-postgres.virtualFolders": [
+        "functions"
+    ],
+    "xmlTools.enableXmlTreeView": false,
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.autopep8"
+    },
+    "python.formatting.provider": "none",
+    "rust-analyzer.completion.limit": null,
+    "rust-analyzer.inlayHints.closureCaptureHints.enable": true,
+    "rust-analyzer.inlayHints.maxLength": null,
+    "debug.terminal.clearBeforeReusing": true,
+    "editor.fontWeight": "normal",
+    "terminal.integrated.drawBoldTextInBrightColors": true,
+    "terminal.integrated.fontWeightBold": "bold",
+    "terminal.integrated.fontWeight": "normal",
+    "editor.fontVariations": true,
+    "editor.defaultColorDecorators": true,
+    "markdown.occurrencesHighlight.enabled": true,
+    "markdown.preview.breaks": true,
+    "markdown.preview.typographer": true,
+    "markdown.validate.enabled": true,
+    "editor.columnSelection": false,
+    "editor.inlayHints.padding": true,
+    "editor.linkedEditing": true,
+    "diffEditor.codeLens": true,
+    "diffEditor.diffAlgorithm": "advanced",
+    "editor.minimap.autohide": true,
+    "workbench.view.alwaysShowHeaderActions": true,
+    "workbench.editor.enablePreviewFromCodeNavigation": true,
+    "workbench.settings.openDefaultSettings": true,
+    "terminal.integrated.tabs.defaultColor": "terminal.ansiRed",
+    "notebook.formatOnSave.enabled": true,
+    "notebook.outline.showCodeCells": true,
+    "workbench.preferredDarkColorTheme": "Monokai Classic",
+    "markdown.updateLinksOnFileMove.enabled": "prompt",
+    "markdown-preview-enhanced.automaticallyShowPreviewOfMarkdownBeingEdited": false,
+    "markdown-preview-enhanced.enableExtendedTableSyntax": false,
+    "markdown-preview-enhanced.enableHTML5Embed": true,
+    "markdown-preview-enhanced.enableTypographer": true,
+    "markdown-preview-enhanced.previewTheme": "monokai.css",
+    "markdown-preview-enhanced.frontMatterRenderingOption": "table",
+    "markdown-preview-enhanced.usePandocParser": false,
+    "hediet.vscode-drawio.theme": "Kennedy",
 }
