--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,17 @@
     panic='abort'
 
 [workspace]
-    members=[
-        "lib",
-        "integration",
-        # "samples/demo-server",
-        # "samples/simple-client",
-        # "samples/mqtt-client",
-        # "samples/simple-server",
-        # "samples/chess-server",
-        # "samples/discovery-client",
-        # "samples/web-client",
-        # "samples/event-client",
-        "tools/certificate-creator",
-    ]
+resolver = "3"
+members = [
+    "lib",
+    "integration",
+    "samples/demo-server",
+    "samples/simple-client",
+    "samples/mqtt-client",
+    "samples/simple-server",
+    "samples/chess-server",
+    "samples/discovery-client",
+    "samples/web-client",
+    "samples/event-client",
+    "tools/certificate-creator",
+]
